# talcs

./: .gitmodules  CMakeLists.txt  CNAME  README.md  _a_s_i_o_audio_device_8h_source.html  _a_s_i_o_audio_device__p_8h_source.html  _a_s_i_o_audio_driver_8h_source.html  _a_s_i_o_audio_driver__p_8h_source.html  _audio_buffer_8h_source.html  _audio_clip_base_8h_source.html  _audio_data_wrapper_8h_source.html  _audio_data_wrapper__p_8h_source.html  _audio_device_8h_source.html  _audio_device__p_8h_source.html  _audio_device_callback_8h_source.html  _audio_driver_8h_source.html  _audio_driver__p_8h_source.html  _audio_driver_manager_8h_source.html  _audio_driver_manager__p_8h_source.html  _audio_format_i_o_8h_source.html  _audio_format_i_o__p_8h_source.html  _audio_format_input_source_8h_source.html  _audio_format_input_source__p_8h_source.html  _audio_sample_converter_8h_source.html  _audio_source_8h_source.html  _audio_source__p_8h_source.html  _audio_source_clip_series_8h_source.html  _audio_source_clip_series__p_8h_source.html  _audio_source_playback_8h_source.html  _audio_source_playback__p_8h_source.html  _audio_source_processor_base_8h_source.html  _audio_source_processor_base__p_8h_source.html  _audio_source_writer_8h_source.html  _audio_source_writer__p_8h_source.html  _audio_stream_base_8h_source.html  _channel_routing_audio_source_8h_source.html  _channel_routing_audio_source__p_8h_source.html  _decibels_8h_source.html  _error_string_provider_8h_source.html  _formulas.tex  (+577 more)
src/: CMakeLists.txt  talcsConfig.cmake.in
src/buffer/: AudioBuffer.cpp  AudioBuffer.h  AudioDataWrapper.cpp  AudioDataWrapper.h  AudioDataWrapper_p.h  IAudioSampleContainer.cpp  IAudioSampleContainer.h  IAudioSampleProvider.cpp  IAudioSampleProvider.h  InterleavedAudioDataWrapper.cpp  InterleavedAudioDataWrapper.h
src/core/: CMakeLists.txt  TalcsCoreGlobal.h
src/device/: ASIOAudioDevice.cpp  ASIOAudioDevice.h  ASIOAudioDevice_p.h  ASIOAudioDriver.cpp  ASIOAudioDriver.h  ASIOAudioDriver_p.h  AbstractOutputContext.cpp  AbstractOutputContext.h  AbstractOutputContext_p.h  AudioDevice.cpp  AudioDevice.h  AudioDeviceCallback.cpp  AudioDeviceCallback.h  AudioDevice_p.h  AudioDriver.cpp  AudioDriver.h  AudioDriverManager.cpp  AudioDriverManager.h  AudioDriverManager_p.h  AudioDriver_p.h  AudioSourcePlayback.cpp  AudioSourcePlayback.h  AudioSourcePlayback_p.h  CMakeLists.txt  OutputContext.cpp  OutputContext.h  OutputContext_p.h  SDLAudioDevice.cpp  SDLAudioDevice.h  SDLAudioDevice_p.h  SDLAudioDriver.cpp  SDLAudioDriver.h  SDLAudioDriverDisplayNameHelper.cpp  SDLAudioDriverDisplayNameHelper.h  SDLAudioDriver_p.h  TalcsDeviceGlobal.h
src/dspx/: CMakeLists.txt  DspxAudioClipContext.cpp  DspxAudioClipContext.h  DspxAudioClipContext_p.h  DspxNoteContext.cpp  DspxNoteContext.h  DspxNoteContext_p.h  DspxProjectAudioExporter.cpp  DspxProjectAudioExporter.h  DspxProjectAudioExporter_p.h  DspxProjectContext.cpp  DspxProjectContext.h  DspxProjectContext_p.h  DspxPseudoSingerContext.cpp  DspxPseudoSingerContext.h  DspxPseudoSingerContext_p.h  DspxSingingClipContext.cpp  DspxSingingClipContext.h  DspxSingingClipContext_p.h  DspxTrackContext.cpp  DspxTrackContext.h  DspxTrackContext_p.h  TalcsDspxGlobal.h
src/format/: AbstractAudioFormatIO.cpp  AbstractAudioFormatIO.h  AudioFormatIO.cpp  AudioFormatIO.h  AudioFormatIO_p.h  AudioFormatInputSource.cpp  AudioFormatInputSource.h  AudioFormatInputSource_p.h  AudioResampler.cpp  AudioResampler.h  AudioResampler_p.h  AudioSourceWriter.cpp  AudioSourceWriter.h  AudioSourceWriter_p.h  CMakeLists.txt  MultichannelAudioResampler.cpp  MultichannelAudioResampler.h  MultichannelAudioResampler_p.h  R8BrainMultichannelResampler.cpp  R8BrainMultichannelResampler.h  R8BrainMultichannelResampler_p.h  R8BrainResampler.cpp  R8BrainResampler.h  R8BrainResampler_p.h  TalcsFormatGlobal.h  TransportAudioSourceWriter.cpp  TransportAudioSourceWriter.h  TransportAudioSourceWriter_p.h
src/global/: TalcsGlobal.h
src/gui/: CMakeLists.txt  TalcsGuiGlobal.h  WaveformPainter.cpp  WaveformPainter.h  WaveformPainter_p.h
src/juceadapter/: CMakeLists.txt  JuceAudioSource.cpp  JuceAudioSource.h  JuceAudioSource_p.h  JucePositionableAudioSource.cpp  JucePositionableAudioSource.h  TalcsAudioSource.h  TalcsJuceAdapterGlobal.h  TalcsPositionableAudioSource.cpp  TalcsPositionableAudioSource.h  TalcsPositionableAudioSource_p.h
src/midi/: CMakeLists.txt  MidiInputDevice.cpp  MidiInputDevice.h  MidiInputDeviceCallback.cpp  MidiInputDeviceCallback.h  MidiInputDevice_p.h  MidiMessage.cpp  MidiMessage.h  MidiSineWaveSynthesizer.cpp  MidiSineWaveSynthesizer.h  MidiSineWaveSynthesizer_p.h  TalcsMidiGlobal.h
src/remote/: CMakeLists.txt  RemoteAudioDevice.cpp  RemoteAudioDevice.h  RemoteAudioDevice_p.h  RemoteEditor.cpp  RemoteEditor.h  RemoteEditor_p.h  RemoteMidiMessageIntegrator.cpp  RemoteMidiMessageIntegrator.h  RemoteMidiMessageIntegrator_p.h  RemoteOutputContext.cpp  RemoteOutputContext.h  RemoteOutputContext_p.h  RemoteProcessInfo.h  RemoteSocket.cpp  RemoteSocket.h  RemoteSocket_p.h  RemoteTransportControllerInterface.cpp  RemoteTransportControllerInterface.h  TalcsRemoteGlobal.h  TransportAudioSourceProcessInfoCallback.cpp  TransportAudioSourceProcessInfoCallback.h
src/source/: AudioFormatInputSource.cpp  AudioFormatInputSource.h  AudioFormatInputSource_p.h  AudioSource.cpp  AudioSource.h  AudioSourceClipSeries.cpp  AudioSourceClipSeries.h  AudioSourceClipSeries_p.h  AudioSource_p.h  ChannelRoutingAudioSource.cpp  ChannelRoutingAudioSource.h  ChannelRoutingAudioSource_p.h  IMixer.cpp  IMixer.h  IMixer_p.h  MemoryAudioSource.cpp  MemoryAudioSource.h  MemoryAudioSource_p.h  MixerAudioSource.cpp  MixerAudioSource.h  MixerAudioSource_p.h  PositionableAudioSource.cpp  PositionableAudioSource.h  PositionableAudioSource_p.h  PositionableMixerAudioSource.cpp  PositionableMixerAudioSource.h  PositionableMixerAudioSource_p.h  SineWaveAudioSource.cpp  SineWaveAudioSource.h  SineWaveAudioSource_p.h  TransportAudioSource.cpp  TransportAudioSource.h  TransportAudioSource_p.h
src/synthesis/: CMakeLists.txt  (+9 more)
(+378 files in other folders)
