add_subdirectory(AudioDriverTutorial)

add_subdirectory(AccessAudioFileTutorial)

add_subdirectory(BufferingAudioSource)

add_subdirectory(Decibels)

add_subdirectory(FutureAudioSource)

add_subdirectory(Integrated)

add_subdirectory(midi)

add_subdirectory(r8brain)

add_subdirectory(RemoteSocket)

add_subdirectory(RemoteAudioDevice)

add_subdirectory(SimpleAudioApplication)

add_subdirectory(AudioProcessorVisualization)